fix last compiler issues and first try to fix containers and guis